fix bug in icons printing (we should not use some icons present in the same time in bootstrap and fontawesome)

--- a/ZONE-watcher/app/views/home/index.html.erb
+++ b/ZONE-watcher/app/views/home/index.html.erb
@@ -19,7 +19,7 @@
       <section id="why" class="clearfix">
         <div class="row">
           <div class="span4">
-            <h4><i class="icon-envelope-alt"></i><%= raw t 'moreabout.getintouch.title' %></h4>
+            <h4><i class="icon-envelope"></i><%= raw t 'moreabout.getintouch.title' %></h4>
             <%= raw t 'moreabout.getintouch.content' %>
           </div>
           <div class="span4">
@@ -47,7 +47,7 @@
         </div>
         <div class="row">
           <div class="span4">
-            <h4><i class="icon-thumbs-up"></i><%= raw t 'moreabout.foryou.title' %></h4>
+            <h4><i class="icon-thumbs-up-alt"></i><%= raw t 'moreabout.foryou.title' %></h4>
             <%= raw t 'moreabout.foryou.content' %>
           </div>
           <div class="span4">
@@ -55,7 +55,7 @@
             <%= raw t 'moreabout.semantic.content' %>
           </div>
           <div class="span4">
-            <h4><i class="icon-search"></i><%= raw t 'moreabout.veilleurs.title' %></h4>
+            <h4><i class="icon-zoom-in"></i><%= raw t 'moreabout.veilleurs.title' %></h4>
             <%= raw t 'moreabout.veilleurs.content' %>
           </div>
         </div>
