fix bug in transmission of lang param between pages

--- a/ZONE-watcher/app/views/home/_search_tool.html.erb
+++ b/ZONE-watcher/app/views/home/_search_tool.html.erb
@@ -7,10 +7,11 @@
 
 		<div class="row-fluid">
 			<div class="span12 btn-marged">
-				<a href="/searches/new">
+                <%= link_to new_search_path do %>
 				<button type="button" class="btn btn-success span12">
 					<h2><%= raw t 'search.gobutton' %></h2>
-				</button></a>
+				</button>
+                    <%end%>
 			</div>
 		</div>
 	</div>
