--- a/ZONE-watcher/app/views/devise/registrations/_new_twitter.html.erb
+++ b/ZONE-watcher/app/views/devise/registrations/_new_twitter.html.erb
@@ -24,8 +24,8 @@
 
 
       <div class="modal-footer">
-        <a href="/" class="btn"><%= t("close")%></a>
-        <%= f.submit raw(t("menu.signUp")),:class => "btn" %>
+        <%= link_to  t("close"), root_path, :class=>"btn"%>
+        <%= f.submit raw(t("menu.signUp")),:class => "btn btn-success" %>
       </div>
 <% end %>
 
