--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="/">Reador</a>
+        <%= link_to "Reador", root_path, :class=>"brand" %>
         <div class="nav-collapse collapse">
           <ul class="nav">
             <li class="<%= 'active' if current_page?(root_path) %>"><%= link_to  t("menu.home"), root_path %></li>
