--- a/ZONE-watcher/app/views/searches/_form.html.erb
+++ b/ZONE-watcher/app/views/searches/_form.html.erb
@@ -219,28 +219,28 @@
 						</div>
 					</div>
 				</div>
-				<div class="row-fluid">
-					<div class="span4"></div>
-					<div class="span4">
-						<button class="btn btn-success span12" type="button"  onclick="switchTab()">
-							<h3><%= raw t "newmodal.sources.go#{type}filtering" %></h3>
-						</button>
-					</div>
-				</div>
+              <div class="row-fluid">
+                <div class="span4"></div>
+                <div class="span4">
+                  <button class="btn span12 btn-success goItem" type="submit" onclick="movingData()">
+                    <h3><%= raw t 'newmodal.sources.goreador' %></h3>
+                  </button>
+                </div>
+              </div>
 				<div class="row-fluid">
 					<div class="span1"></div>
 					<div class="span10">
 						<hr>
 					</div>
 				</div>
-				<div class="row-fluid">
-					<div class="span4"></div>
-					<div class="span4">
-						<button class="btn span12 goItem" type="submit" onclick="movingData()">
-							<h3><%= raw t 'newmodal.sources.goreador' %></h3>
-						</button>
-					</div>
-				</div>
+              <div class="row-fluid">
+                <div class="span5"></div>
+                <div class="span2">
+                  <button class="btn btn-small span12 " type="button"  onclick="switchTab()">
+                    <h5><%= raw t "newmodal.sources.go#{type}filtering" %></h5>
+                  </button>
+                </div>
+              </div>
 			</div><!--tab-pane -->
 			<div class="tab-pane" id="filtering">
 				<div class="row-fluid">
