fix bug in opml import and filter generation with this filter

--- a/ZONE-watcher/app/views/stats/index.html.erb
+++ b/ZONE-watcher/app/views/stats/index.html.erb
@@ -9,3 +9,6 @@
   </tr>
 <% end %>
 </table>
+
+
+<iframe frameborder='0' height='1100px' width='1200px' id='embedded' src='https://www.stathat.com/cards/Q1gcKQzP5kn3' />
