--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -22,10 +22,10 @@
 			<!--header news part -->
             <img src="<%= @item.getTypePicture%>" class="littleCircleImage" width=30 height=30>
             <a class="titleItem" target="_blank" href= "<%= @item.uri %>"><b><u><%= @item.props["http://purl.org/rss/1.0/title"][0]%></u> </b> </a>
-            <span class="showFavorite hide"><i class="icon-share pointerMouse"></i></span>
+          <!--<span class="showFavorite hide"><i class="icon-share pointerMouse"></i></span>
             <span class="row-favorite btn-group hide">
-                <%= render 'show_tool_bar', :item => @item %>
-            </span>
+                %= render 'show_tool_bar', :item => @item %>
+            </span>-->
 			<i>
               <%=
                 begin
