[#58333794] fix register page bugs (translations)

--- a/ZONE-watcher/app/views/items/_show_tool_bar.html.erb
+++ b/ZONE-watcher/app/views/items/_show_tool_bar.html.erb
@@ -5,7 +5,7 @@
 <% if !user_signed_in? %>
     <button
     id="tagsBTN"
-    class="btn btn-share btn-addTag"
+    class="disabled btn btn-share btn-addTag"
     type="button"
     data-toggle="popover"
     data-placement="bottom"
@@ -23,7 +23,7 @@
 
     <button
         id="favBTN"
-        class="btn btnFavorite btn-share favBTN"
+        class="disabled btn btnFavorite btn-share favBTN"
         type="button"
         data-toggle="popover"
         data-placement="bottom"
