--- a/ZONE-watcher/app/views/devise/registrations/new.html.erb
+++ b/ZONE-watcher/app/views/devise/registrations/new.html.erb
@@ -6,24 +6,18 @@
 <%= render 'new_google'%>
 <%else%>
 
-<h2>Sign up</h2>
+<h2><%= raw t 'menu.signUp'%></h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+<%= bootstrap_form_for(resource, :as => resource_name, :url => registration_path(resource_name),  :html => {:class => 'form-horizontal'} ) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
-
-  <div><%= f.label :login %><br />
-  <%= f.text_field :login %></div>
-  
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
+  <%= f.email_field :email %>
+  <%= f.text_field :login %>
+  <%= f.password_field :password %>
+  <%= f.password_field :password_confirmation %>
+  <%= f.control_group do %>
+    <%= f.submit raw t 'menu.signUp', :class=>'btn' %>
+  <%end%>
 <% end %>
 
 <%= render "devise/shared/links" %>
