[#58333794] some minor bug fix on home page and add the howtoo video

--- a/ZONE-watcher/app/assets/stylesheets/application.css
+++ b/ZONE-watcher/app/assets/stylesheets/application.css
@@ -11,3 +11,17 @@
  *= require_self
  *= require_tree .
  */
+
+.navbar-brand {
+    margin-left: -15px;
+}
+.navbar-brand {
+    color: #777777;
+}
+.navbar-brand, .navbar-brand:hover {
+    transition: color 0.2s ease-in-out 0s;
+}
+.navbar-brand {
+    float: left;
+    font-size: 18px;
+}
