--- a/ZONE-watcher/app/views/home/index.html.erb
+++ b/ZONE-watcher/app/views/home/index.html.erb
@@ -1,12 +1,23 @@
-<div class="alert alert-error">
+<!--<div class="alert alert-error">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
   <%= raw t 'index.disclaimer' %>
-</div>
+</div>-->
 
 <div class="search clear-top">
 
 <%= render 'home/search_tool'%>
+
+  <div class="row" xmlns="http://www.w3.org/1999/html" style="margin-top:66px; height:366px">
+    <div class="span2"></div>
+    <div class="span8 ">
+            <iframe src="//player.vimeo.com/video/74277156" width="650" height="366" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+    <div class="span2"></div>
+  </div>
+
 </div>
+
+
 </div>
 </div>
 
