--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -31,10 +31,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <%= link_to "Reador", root_path, :class=>"brand" %>
         <div class="nav-collapse collapse">
           <ul class="nav">
-            <li class="<%= 'active' if current_page?(root_path) %>"><%= link_to  t("menu.home"), root_path %></li>
+            <li><%= link_to "Reador.NET", root_path, :class=>"navbar-brand" %></li>
             <li class="<%= 'active' if current_page?(items_path) %>"><%= link_to t("menu.news"), items_path %></li>
             <li class="<%= 'active' if current_page?(sources_path) %>"><%= link_to t("menu.sources"), sources_path %></li>
             <li class="<%= 'active' if current_page?(twitter_path) %>"><%= link_to t("menu.twitter"), twitter_path %></li>
