[#58333794] lots of small bug fix: remove background color on links, add the rss feeds to html head, remove time annotations, change star color add popover on RSS button, clean register form, clean navbar for responsive design

--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -85,6 +85,14 @@
 	<%= link_to(params.merge(:format => :rss)) do%>
 		<button id="buttonRss" class="btn btn-warning pull-right"><i class="icon-rss"></i></button>
 	<%end%>
+    <script>
+        $('#buttonRss').popover({
+            trigger: 'hover',
+            placement: 'bottom',
+            html: true,
+            content: "<%=  t 'newmodal.filtering.generateRSS' %>"
+        });
+    </script>
 	<span class="numberItem pull-right"><%= @itemsNumber %> items</span>
 </div>
 
