--- a/ZONE-watcher/app/views/items/_show_tool_bar.html.erb
+++ b/ZONE-watcher/app/views/items/_show_tool_bar.html.erb
@@ -50,9 +50,15 @@
     <button class="btn btn-share btn-addTag" onclick="addItemTag($(this).parent())">
       <i class="icon icon-tag"/>
     </button>
-  <button class="btn btnFavorite btn-share <%= (@item.favorite) ? "btn-success" : ""%>" onclick='addFavorite("<%= @item.uri%>",this)'>
-    <i class="icon icon-star-empty"></i>
-  </button>
+    <% if (@item.favorite) %>
+      <button class="btn btnFavorite btn-share btn-success" onclick='addFavorite("<%= @item.uri%>",this)'>
+        <i class="icon icon-star" style="color:yellow"></i>
+      </button>
+    <%else%>
+      <button class="btn btnFavorite btn-share <%= (@item.favorite) ? "btn-success" : ""%>" onclick='addFavorite("<%= @item.uri%>",this)'>
+        <i class="icon icon-star" ></i>
+      </button>
+    <%end%>
 <%end%>
 <!--<button class="btn btn-share" onclick='checkOpacity(this)'>
   <i class="icon icon-check"></i>
