--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -80,6 +80,9 @@
 		</div>
 	</div>
 	<div id="scrollTable" class="span8" data-spy="scroll" data-target="#navTheme" data-offset-top="10">
+      <% if @sources.size == 0 %>
+        <h3> Vous n'avez encore crée aucune source</h3>
+      <%end%>
 		<% startNewTable = true %>
 		<% actualTableTheme = nil%>
 		<% numberTheme = 0 %>
