--- a/ZONE-watcher/app/views/devise/registrations/edit.html.erb
+++ b/ZONE-watcher/app/views/devise/registrations/edit.html.erb
@@ -25,6 +25,6 @@
 <%end%>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3><%= t('devise.cancelAccount')%></h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
+<p><%= link_to t('devise.cancelAccount'), registration_path(resource_name), :data => { :confirm => t('devise.areYouSure') }, :method => :delete %>.</p>
