--- a/ZONE-watcher/app/views/layouts/_login.html.erb
+++ b/ZONE-watcher/app/views/layouts/_login.html.erb
@@ -1,7 +1,6 @@
 <% if user_signed_in? %>
-  <li>
-    <%= link_to t("menu.editAccount"), edit_user_registration_path %>
-  </li>
+    <li class="<%= 'active' if current_page?(favorites_path) %>"><%= link_to raw("<i class=\"icon-star\" ></i>"), favorites_path %></li>
+    <li><%= link_to t("menu.editAccount"), edit_user_registration_path %></li>
   <li>
     <%= link_to t("menu.logout"), destroy_user_session_path, :method=>'delete' %>
   </li>
