--- a/ZONE-watcher/app/views/devise/registrations/edit.html.erb
+++ b/ZONE-watcher/app/views/devise/registrations/edit.html.erb
@@ -1,27 +1,17 @@
 <% if current_user.provider == nil %>
 
 
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2><%= t('menu.editAccount')%></h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+<%= bootstrap_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
 
-
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
-
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
+  <%= f.email_field :email %>
+  <%= f.password_field :password, :autocomplete => "off", help: t('devise.registrations.edit.password_instruction') %>
+  <%= f.password_field :password_confirmation %>
+  <%= f.password_field :current_password, help: t('devise.registrations.edit.current_password_instruction') %>
 
 
-  <div><%= f.submit "Update" %></div>
+  <%= f.submit t('items.modal.edit.update') %>
 <%end%>
 <% end %>
 
