--- a/ZONE-watcher/app/views/devise/shared/_links.erb
+++ b/ZONE-watcher/app/views/devise/shared/_links.erb
@@ -3,7 +3,7 @@
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to t('devise.passwords.forgot'), new_registration_path(resource_name) %><br />
+  <%= link_to t('menu.signUp'), new_registration_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
