[#58333794] fix bug in homepage moreabout

--- a/ZONE-watcher/app/views/home/index.html.erb
+++ b/ZONE-watcher/app/views/home/index.html.erb
@@ -24,7 +24,7 @@
 
 <div class="splash splash-off">
   <div class="container">
-    <div class="text-center more-infos"><h1><a href="#"><%= raw t 'moreabout.title' %></a></h1></div>
+    <div class="text-center more-infos"><h1><a href="#moreAbout" id="moreAbout"><%= raw t 'moreabout.title' %></a></h1></div>
 
     <span class="infos infos-off">
       <section id="why" class="clearfix">
