[#58333794] change favorite button color, change homepage disclaimer mesasge, add sources page diclaimer message

--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -299,3 +299,7 @@ a.label:visited{
 .addtag{
   margin-bottom: 0px;
 }
+
+.btnFavorite-on{
+  background-color: hsl(42, 100%, 56%) !important; background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffda84", endColorstr="#ffbb1e"); background-image: -khtml-gradient(linear, left top, left bottom, from(#ffda84), to(#ffbb1e)); background-image: -moz-linear-gradient(top, #ffda84, #ffbb1e); background-image: -ms-linear-gradient(top, #ffda84, #ffbb1e); background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffda84), color-stop(100%, #ffbb1e)); background-image: -webkit-linear-gradient(top, #ffda84, #ffbb1e); background-image: -o-linear-gradient(top, #ffda84, #ffbb1e); background-image: linear-gradient(#ffda84, #ffbb1e); border-color: #ffbb1e #ffbb1e hsl(42, 100%, 51%);  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.33); -webkit-font-smoothing: antialiased;color:white;
+}
