--- a/ZONE-watcher/app/views/home/index.html.erb
+++ b/ZONE-watcher/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
-<!--<div class="alert alert-error">
+<div class="alert alert-error">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
   <%= raw t 'index.disclaimer' %>
-</div>-->
+</div>
 
 <div class="search clear-top">
 
