--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -1,39 +1,10 @@
-<div id="modalNewSource" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel"><%= t("source.new.title")%></h3>
-  </div>
-  <div class="modal-body">
-    <%= render 'form' %>
-  </div>
-</div>
+<% if @sources.size == 0 %>
+    <div class="alert alert-info">
+      <%= raw t("source.disclaimer")%>
+    </div>
+<%end%>
 
-<div id="modalNewImport" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel"><%= t("source.opml.title")%></h3>
-  </div>
-  <div class="modal-body">
-    <%= form_for(:upload, :url => { :action => "uploadopml" }, :html => { :multipart => true }, :remote => true) do |form| %>
-		<div class="row-fluid">
-			<div class="span10 offset1">
-				<span id="fileTextName" data-initial="<%= t("source.opml.empty")%>"><%= t("source.opml.empty")%></span>
-			</div>
-		</div>
-		<div class="row-fluid">
-			<div class="span5 offset1">
-				<input id="upload_datafile" name="upload[datafile]" type="file" hidden onchange="updateFilename($(this).val())">
-				<button id="btnImport" class="btn btn-info span12" onclick="$('#upload_datafile').click();return false;">
-					<%= t("source.opml.button.select")%>
-				</button>
-			</div>
-			<div class="span5">
-				<%= form.submit t("source.opml.button.upload"),:class => 'btn btn-success span12', :onclick => '$("#fileTextName").html("");setTimeout(\'window.location.reload();\', 2000);'%>
-			</div>
-		</div>
-	<% end %>
-  </div>
-</div>
+
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<h2><%= t("source.title")%></h2>
@@ -80,9 +51,6 @@
 		</div>
 	</div>
 	<div id="scrollTable" class="span8" data-spy="scroll" data-target="#navTheme" data-offset-top="10">
-      <% if @sources.size == 0 %>
-        <h3> Vous n'avez encore crée aucune source</h3>
-      <%end%>
 		<% startNewTable = true %>
 		<% actualTableTheme = nil%>
 		<% numberTheme = 0 %>
@@ -136,4 +104,45 @@
 			</fieldset>
 		<% end %>
 	</div>
+</div>
+
+
+
+
+<!-- modals-->
+<div id="modalNewSource" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel"><%= t("source.new.title")%></h3>
+  </div>
+  <div class="modal-body">
+    <%= render 'form' %>
+  </div>
+</div>
+
+<div id="modalNewImport" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel"><%= t("source.opml.title")%></h3>
+  </div>
+  <div class="modal-body">
+    <%= form_for(:upload, :url => { :action => "uploadopml" }, :html => { :multipart => true }, :remote => true) do |form| %>
+        <div class="row-fluid">
+          <div class="span10 offset1">
+            <span id="fileTextName" data-initial="<%= t("source.opml.empty")%>"><%= t("source.opml.empty")%></span>
+          </div>
+        </div>
+        <div class="row-fluid">
+          <div class="span5 offset1">
+            <input id="upload_datafile" name="upload[datafile]" type="file" hidden onchange="updateFilename($(this).val())">
+            <button id="btnImport" class="btn btn-info span12" onclick="$('#upload_datafile').click();return false;">
+              <%= t("source.opml.button.select")%>
+            </button>
+          </div>
+          <div class="span5">
+            <%= form.submit t("source.opml.button.upload"),:class => 'btn btn-success span12', :onclick => '$("#fileTextName").html("");setTimeout(\'window.location.reload();\', 2000);'%>
+          </div>
+        </div>
+    <% end %>
+  </div>
 </div>
