--- a/ZONE-watcher/app/views/home/index.html.erb
+++ b/ZONE-watcher/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="alert alert-error">
+<div class="alert alert-info">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
   <%= raw t 'index.disclaimer' %>
 </div>
