fix "can reador herlp you" bugs

--- a/ZONE-watcher/app/views/home/_search_tool.html.erb
+++ b/ZONE-watcher/app/views/home/_search_tool.html.erb
@@ -3,7 +3,7 @@
 	<div id="dino-logo" class="span3"><img src="/assets/dino.png"/>
 	</div>
 	<div class="span5 ">
-		<h1 class="triangle-border left"  id="reador-title"><%= raw t 'search.infobulle' %></h1>
+		<h2 class="triangle-border left basicMouse"  id="reador-title"><%= raw t 'search.infobulle' %></h2>
 
 		<div class="row-fluid">
 			<div class="span12 btn-marged">
