--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
   <%= javascript_include_tag("/bootstrap/js/bootstrap.min.js")%>
   <%= javascript_include_tag "/jquery.sexy-combo/jquery.sexy-combo.js" %>
   <%= javascript_include_tag "/jwplayer/jwplayer.js" %>
+  <%= javascript_include_tag "bootstrapx-clickover" %>
   <%= favicon_link_tag "favicon.png" %>
   <%= javascript_tag do %>
  	I18n.defaultLocale = "<%= I18n.default_locale %>";
