--- a/ZONE-watcher/app/views/devise/registrations/edit.html.erb
+++ b/ZONE-watcher/app/views/devise/registrations/edit.html.erb
@@ -1,20 +1,23 @@
+<h3><%= t('devise.cancelAccount')%></h3>
+
+<p><%= link_to t('devise.cancelAccount'), registration_path(resource_name), :data => { :confirm => t('devise.areYouSure') }, :method => :delete %>.</p>
+
+
 <% if current_user.provider == nil %>
 
 
 <h2><%= t('menu.editAccount')%></h2>
 
-<%= bootstrap_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+<%= bootstrap_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: 'form-horizontal' , :method => :put }, help: :block) do |f| %>
 
   <%= f.email_field :email %>
   <%= f.password_field :password, :autocomplete => "off", help: t('devise.registrations.edit.password_instruction') %>
   <%= f.password_field :password_confirmation %>
   <%= f.password_field :current_password, help: t('devise.registrations.edit.current_password_instruction') %>
 
-
-  <%= f.submit t('items.modal.edit.update') %>
+        <%= f.actions do %>
+            <%= f.primary t('items.modal.edit.update') %>
+        <% end %>
 <%end%>
 <% end %>
 
-<h3><%= t('devise.cancelAccount')%></h3>
-
-<p><%= link_to t('devise.cancelAccount'), registration_path(resource_name), :data => { :confirm => t('devise.areYouSure') }, :method => :delete %>.</p>
