--- a/ZONE-watcher/app/views/devise/registrations/new.html.erb
+++ b/ZONE-watcher/app/views/devise/registrations/new.html.erb
@@ -8,12 +8,12 @@
 
 <h2><%= raw t 'menu.signUp'%></h2>
 
-<%= bootstrap_form_for(resource, :as => resource_name, :url => registration_path(resource_name),  :html => {:class => 'form-horizontal'} ) do |f| %>
+<%= bootstrap_form_for(resource, :as => resource_name, :url => registration_path(resource_name),  :html => {:class => 'form-horizontal'}, help: :block ) do |f| %>
   <%= f.email_field :email %>
   <%= f.password_field :password %>
   <%= f.password_field :password_confirmation %>
-  <%= f.control_group do %>
-    <%= f.submit raw t 'menu.signUp', :class=>'btn' %>
+  <%= f.actions do %>
+    <%= f.primary raw t 'menu.signUp', :class=>'btn' %>
   <%end%>
 <% end %>
 
