clean add sources form

--- a/ZONE-watcher/app/views/searches/selectSources.erb
+++ b/ZONE-watcher/app/views/searches/selectSources.erb
@@ -39,7 +39,7 @@
 	<tr>
 		<td class="span2">
 		<button class="btn btn-success" type="button" onclick="addPersonnalRss('<%= source.uri%>');">
-			Ajouter
+			<%= t('semanticfiltering.button.addone') %>
 		</button></td>
 		<td class="span5"><%= source.label %></td>
 		<td class="span5 uri"><%= source.uri%></td>
