--- a/ZONE-watcher/app/views/sources/_form.html.erb
+++ b/ZONE-watcher/app/views/sources/_form.html.erb
@@ -39,11 +39,11 @@
         <div id="ajax-container-theme"></div>
       </div>
     </div>
-    <div class="control-group">
-    	<div class="controls span2 offset9">
-        <%= f.submit t("source.new.add"), :class => 'btn btn-success span12' %>
+    </div>
+      <div class="modal-footer">
+        <div class="clear"><%= f.submit t("source.new.add"), :class => 'btn btn-success' %></div>
       </div>
-   	 
+
    	</div>
 <% end %>
 </div>
